--- a/i.html
+++ b/i.html
@@ -1515,7 +1515,7 @@
        <h3>Our Mission</h3>
        <p id="mission-text">MahakTech is a premier technology education and solutions provider dedicated to bridging the gap between traditional learning and industry demands. We deliver world-class training programs, enterprise software solutions, and digital transformation services to businesses and individuals worldwide.</p>
        <p>With a team of industry experts and cutting-edge technology infrastructure, we've successfully trained over 5,000 professionals and delivered 500+ enterprise projects across various sectors.</p>
-       <div class="social-links"><a href="https://linkedin.com/in/mahak-tech-377406365" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-linkedin-in"></i> </a> <a href="https://github.com/Mahak-Tech-05/Mahak-Tech-05.git" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-github"></i> </a> <a href="https://https://www.instagram.com/p/DRfCgb0Ch6v/?utm_source=ig_web_copy_link" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-instagram"></i> </a> <a href="mailto:saxenamahak612@gmail.com" class="social-icon"> <i class="fas fa-envelope"></i> </a>
+       <div class="social-links"><a href="https://linkedin.com/in/mahak-tech-377406365" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-linkedin-in"></i> </a> <a href="https://github.com/Mahak-Tech-05/Mahak-Tech-05.git" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-github"></i> </a> <a href="mahak_tech" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-instagram"></i> </a> <a href="mailto:saxenamahak612@gmail.com" class="social-icon"> <i class="fas fa-envelope"></i> </a>
        </div>
       </div>
       <div class="stats-container">
@@ -1668,8 +1668,7 @@
     <footer>
      <div class="footer-content">
       <p class="footer-text">© 2024 MahakTech - Leading Tech Education &amp; Solutions Provider</p>
-      <div class="footer-social"><a href="https://github.com" target="_blank" rel="noopener noreferrer"> <i class="fab fa-github"></i> </a> <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in"></i> </a> <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter"></i> </a> <a href="mailto:info@mahaktech.com"> <i class="fas fa-envelope"></i> </a>
-      </div>
+      <div class="footer-social"><a href="https://linkedin.com/in/mahak-tech-377406365" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-linkedin-in"></i> </a> <a href="https://github.com/Mahak-Tech-05/Mahak-Tech-05.git" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-github"></i> </a> <a href="mahak_tech" target="_blank" rel="noopener noreferrer" class="social-icon"> <i class="fab fa-instagram"></i> </a> <a href="mailto:saxenamahak612@gmail.com" class="social-icon"> <i class="fas fa-envelope"></i> </a>
       <div class="footer-links"><a href="#about">About</a> <a href="#services">Services</a> <a href="#training">Training</a> <a href="#contact">Contact</a>
       </div>
      </div>
