--- a/i.html
+++ b/i.html
@@ -1652,7 +1652,7 @@
       <div class="contact-info">
        <div class="contact-item"><i class="fas fa-envelope"></i>
         <h4>Email</h4>
-        <p>info@mahaktech.com</p>
+        <p>saxenamahak612@gmail.com</p>
        </div>
        <div class="contact-item"><i class="fas fa-map-marker-alt"></i>
         <h4>Location</h4>
